--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             Web<span>Studio</span>
         </a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26, <br>
+            <p>г. Киев, пр-т Леси Украинки, 26</p><br>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
